@@ -1,0 +1,7 @@
+# Filename regex -> password map
+# Example any file ending in .doc should use password foobar:
+#  .*\.doc = fooBar
+#
+# Note: Apache Tika 1.1 supports password for .pdf and .docx only, not .doc or other formats 
+.*\.pdf$ = solrRules
+.*\.docx$ = Word2010
